# stacs-audio

./: CMakeLists.txt  README.md  audio-fftwstat.cpp  audio-mfccstat.cpp  audio-recv.cpp  audio-send.cpp  audio-sendlist.cpp  audio-testlist.cpp  audio-yarp.h  stacs-audio.cpp  stacs-labphn.cpp  stacs-labphncat.cpp  stacs-phone.cpp
