cmake_minimum_required(VERSION 2.8.9)

FIND_PACKAGE(YARP REQUIRED)
FIND_PATH(FFTW_INCLUDE_DIRS fftw3.h)
FIND_LIBRARY(FFTW_LIBRARIES NAMES fftw3)
INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS} ${FFTW_INCLUDE_DIRS})
LINK_LIBRARIES(${YARP_LIBRARIES} ${FFTW_LIBRARIES})
SET(CMAKE_CXX_FLAGS "-std=c++11")

ADD_EXECUTABLE(audio-send audio-send.cpp)
ADD_EXECUTABLE(audio-recv audio-recv.cpp)
ADD_EXECUTABLE(audio-sendlist audio-sendlist.cpp)
ADD_EXECUTABLE(audio-testlist audio-testlist.cpp)
ADD_EXECUTABLE(audio-fftwstat audio-fftwstat.cpp)
ADD_EXECUTABLE(audio-mfccstat audio-mfccstat.cpp)
ADD_EXECUTABLE(stacs-audio stacs-audio.cpp)
ADD_EXECUTABLE(stacs-phone stacs-phone.cpp)
ADD_EXECUTABLE(stacs-labphn stacs-labphn.cpp)
ADD_EXECUTABLE(stacs-labphncat stacs-labphncat.cpp)

TARGET_LINK_LIBRARIES(audio-send ${YARP_LIBRARIES})
TARGET_LINK_LIBRARIES(audio-recv ${YARP_LIBRARIES})
TARGET_LINK_LIBRARIES(audio-sendlist ${YARP_LIBRARIES})
TARGET_LINK_LIBRARIES(audio-testlist ${YARP_LIBRARIES})
TARGET_LINK_LIBRARIES(audio-fftwstat ${YARP_LIBRARIES} ${FFTW_LIBRARIES})
TARGET_LINK_LIBRARIES(audio-mfccstat ${YARP_LIBRARIES} ${FFTW_LIBRARIES})
TARGET_LINK_LIBRARIES(stacs-audio ${YARP_LIBRARIES})
TARGET_LINK_LIBRARIES(stacs-phone ${YARP_LIBRARIES})
TARGET_LINK_LIBRARIES(stacs-labphn ${YARP_LIBRARIES})
TARGET_LINK_LIBRARIES(stacs-labphncat ${YARP_LIBRARIES})
